# FastAPI-Tutorial

./: FastAPI-template.drawio  Untitled Diagram.drawio
lesson1/: hello_fastapi.py  main.py
lesson2/: main.py
lesson2/static/: hello.js
lesson2/templates/: hello.html
lesson3/: main.py
lesson3/templates/: login.html
lesson4/: Learning.drawio  README.md  app.py  requirements.txt  server.py
lesson4/configs/: base_cfg.py
lesson4/middleware/: cors.py  http.py
lesson4/models/: basemodels.py  predictors.py
lesson4/routers/: base.py  object_router.py
lesson4/schemas/: object_schema.py
lesson4/utils/: logger.py
lesson5/src/: main.py
lesson5/src/config/: events.py
lesson5/src/config/settings/: development.py  environment.py  production.py  staging.py
lesson5/src/models/db/: account.py
lesson5/src/models/schemas/: account.py  base.py
lesson5/src/repository/: base.py  database.py
lesson5/src/utils/formatters/: datetime_formatter.py
lesson7/: Dockerfile  pyproject.toml  requirements.txt
lesson7/api/: crud.py  database.py  emailassistant.db  helper.py  main.py  models.py  routes.py  schemas.py
lesson7/api/llm/: document_exporter.py  test_llm.ipynb  utils.py
lesson7/fastai/: pyvenv.cfg
lesson7/fastai/Scripts/: activate  activate.bat
